<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_version">1.2.6.0</string>
    <string name="app_name">Lumus Scratchpad</string>
    <string name="action_settings">Settings</string>
    <string name="scratchpad_view">scratchpad</string>
    <string name="button_back">BACK</string>
    <string name="button_home">HOME</string>
    <string name="button_keyboard">Keyboard</string>
    <string name="button_options">Options</string>
    <string name="title_activity_touchpad">Lumus Touchpad</string>
    <string name="title_activity_mousepad">Lumus Mousepad</string>
    <string name="title_activity_scratchpad">Lumus Scratchpad</string>

    <!-- Pager Labels -->
    <string name="action_previous">Mousepad</string>
    <string name="action_next">Touchpad</string>
    <string name="action_keyboard">Keypad</string>
    <string name="action_bar_settings">Settings</string>

    <!-- PD40 TCP Client Service -->
    <string name="pd40tcp_service_label">PD40 Connection Service</string>
    <string name="pd40tcp_service_started">Started</string>
    <string name="pd40tcp_service_searching">Searching</string>
    <string name="pd40tcp_service_connected">Connected</string>
    <string name="pd40tcp_service_disconnected">Disconnected</string>
    <string name="pd40tcp_service_stopped">Stopped</string>

    <!-- Technician EditText hints -->
    <string name="editQuicklaunchText">Button label</string>
    <string name="editQuicklaunchAction">Action</string>
    <string name="editQuicklaunchPackage">Package</string>
    <string name="editQuicklaunchActivityName">Activity</string>

</resources>