<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TechnicianActivity" >

    <Button
        android:id="@+id/quickLauncherButton0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onQuickLauncherClick" />

    <Button
        android:id="@+id/quickLauncherButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onQuickLauncherClick" />

    <Button
        android:id="@+id/quickLauncherButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onQuickLauncherClick" />

    <Button
        android:id="@+id/quickLauncherButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onQuickLauncherClick" />

    <Button
        android:id="@+id/quickLauncherButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onQuickLauncherClick" />

    <EditText
            android:id="@+id/editQuicklaunchText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editQuicklaunchText"
            android:inputType="textNoSuggestions" />
    <EditText
            android:id="@+id/editQuicklaunchAction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editQuicklaunchAction"
            android:inputType="textCapCharacters" />
    <EditText
            android:id="@+id/editQuicklaunchPackage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editQuicklaunchPackage"
            android:inputType="textNoSuggestions" />
    <EditText
            android:id="@+id/editQuicklaunchActivityName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editQuicklaunchActivityName"
            android:inputType="textNoSuggestions" />

</LinearLayout>