<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical|left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScratchpadActivity" >

    <FrameLayout
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/action_bar"
        android:gravity="right"
        android:orientation="horizontal" >

        <com.tandemg.scratchpad.VertSeekBar
            android:id="@+id/brightness_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <com.tandemg.scratchpad.NonSwipeableViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:paddingLeft="22dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right" >
        </com.tandemg.scratchpad.NonSwipeableViewPager>
    </FrameLayout>

    <LinearLayout
        android:id="@id/action_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/surface"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:onClick="onClick_Back"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/button_home"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:onClick="onClick_Home"
            android:text="@string/button_home" />

        <Button
            android:id="@+id/button_keyboard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="left"
            android:onClick="onClick_Keyboard"
            android:text="@string/button_keyboard" />
    </LinearLayout>

</RelativeLayout>